--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 								<p>
 									Currently I work at a software company as a Software Engineer. From this experience I have quickly picked up on
 									valuable skills and have learned to work in an agile environment. It opened my outlook to take into account 
-									efficenty and security with my development.
+									efficiency and security with my development.
 									
 								</p>
 								<section>
@@ -67,7 +67,7 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<p1><strong>Security</strong></p1>
 											<br>
-											<body>I am always keeping on top of security threats since we need to stay <b><i>HIPPA compliant</i></b>.</body>
+											<body>I am always keeping on top of security threats since we need to stay <b><i>HIPAA compliant</i></b>.</body>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<img src="images/SQL.png" alt="sql"/>
