text changes made.

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<p1><strong>SQL</strong></p1>
 											<br>
-											<body>Scripts are utilized to manipute the needed data or extract usefully infomation. We also used another database called
-												<b><i>Elasticsearch</i></b> to allow the client to search and report quickly on information.
+											<body>
+												Scripts are utilized to manipute the needed data or extract usefully infomation. We also used another database called
+												<b><i>Elasticsearch</i></b> to allow the client to search and report quickly on information. This allowed for a better user
+												experience.
 											</body>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
@@ -61,17 +63,22 @@
 											<br>
 											<body>
 											The software that I improve is written in C# with ASP.net MVC. I've quickly picked up on the language as well as some front
-												end languages like jquery and react.
+												end languages like jquery and react. C# is the first language I have used in a professional setting. In personal projects or 
+												school I have used Java & C++.
 											</body>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<p1><strong>Security</strong></p1>
 											<br>
-											<body>I am always keeping on top of security threats since we need to stay <b><i>HIPAA compliant</i></b>.</body>
+											<body>
+												I am always keeping on top of security threats since we need to stay <b><i>HIPAA compliant</i></b>. This helped the company
+												as we have audits that need to stay up to date. Every week I made sure that we ran self audits to ensure that my organization
+												was always ahead of those who wanted to do harm.
+											</body>
 										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<img src="images/SQL.png" alt="sql"/>
-										</div>
+									</div>
+									<div class="text-center">
+										<img src="images/SQL.png" alt="sql" class="img-fluid"/>
 									</div>
 								</section>
 							</article>
