--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 											<p1><strong>C#</strong></p1>
 											<br>
 											<body>
-											The software that I improve is written in C# with ASP.net MVC. I've quickly picked up on the language as well as some front
-												end languages like jquery and react. C# is the first language I have used in a professional setting. In personal projects or 
+											The software that I create is written in C# with ASP.net MVC. I've quickly picked up on the language as well as some front
+												end languages like vue and react. C# is the first language I have used in a professional setting. In personal projects or 
 												school I have used Java & C++.
 											</body>
 										</div>
